--- a/templates/gestores.html
+++ b/templates/gestores.html
@@ -37,7 +37,7 @@
 
     {# 2. GESTIÓN DE CLIENTES #}
     {% if perms.users.ver_gestor_clientes or user.is_superuser %}
-    <a href="#" class="group bg-white rounded-3xl p-8 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 flex flex-col">
+    <a href="{% url 'beneficiarios:lista' %}" class="group bg-white rounded-3xl p-8 shadow-sm hover:shadow-xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 flex flex-col">
         <div class="w-14 h-14 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-emerald-600 group-hover:text-white transition-colors duration-500">
             <i class="fas fa-users text-2xl"></i>
         </div>
